Add new style class

--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../fontawesome/css/fontawesome.min.css">
 
     <link rel="stylesheet" type="text/css" href="../Style/style-custom.css">
+    <link rel="stylesheet" type="text/css" href="../Style/style-custom-nav.css">
 
 </head>
 
