styled  nav bar

--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -15,11 +15,11 @@
 </head>
 
 <body>
-    <div class="div-parent">
+    <div class="div-parent-md">
         <div class="navbar">
             <a href="#home" class="nav-logo-text"><i class="fas fa-subway"></i>&nbsp BOOKit</a>
 
-            <div class="dropdown pull-right">
+            <div class="dropdown pull-right nav-user-space">
                 <button class="dropbtn"><i class="fas fa-user"></i>
                     <i class="fa fa-caret-down"></i>
                 </button>
@@ -35,9 +35,38 @@
             
         </div>
         
-        <div class="navbar navbar-child-style child-nav-color">
-                <div class="dropdown ">
-                        <button class="dropbtn nav-child-color"><i class="fas fa-user"></i>
+        <div class="navbar navbar-child-style">
+                <div class="dropdown pull-left nav-child-space">
+                        <!--First item-->
+                        <button class="dropbtn nav-child-color"><i class="fas fa-train"></i>
+                            <div style="font-size: 22px;">Train Details</div>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+
+                        
+                </div>
+
+                <!--Second item-->
+                <div class="dropdown pull-left nav-child-space">
+                    
+                    <button class="dropbtn nav-child-color"><i class="fas fa-warehouse"></i>
+                        <div style="font-size: 22px;">Train Details</div>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+
+                 <!--Third item-->
+                 <div class="dropdown pull-left nav-child-space">
+                    
+                        <button class="dropbtn nav-child-color"><i class="fas fa-briefcase"></i>
                             <div style="font-size: 22px;">Train Details</div>
                         </button>
                         <div class="dropdown-content">
@@ -46,8 +75,49 @@
                             <a href="#">Link 3</a>
                         </div>
                     </div>
+
+                <!--forth item-->
+                <div class="dropdown pull-left nav-child-space">
+                    
+                        <button class="dropbtn nav-child-color"><i class="fas fa-credit-card"></i>
+                            <div style="font-size: 22px;">Train Details</div>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                </div>
+
+                <!--fifth item-->
+                <div class="dropdown pull-left nav-child-space">
+                    
+                        <button class="dropbtn nav-child-color"><i class="fas fa-calendar-alt"></i>
+                            <div style="font-size: 22px;">Train Details</div>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                </div>
+
+                <!--sixth item-->
+                <div class="dropdown pull-left nav-child-space">
+                    
+                        <button class="dropbtn nav-child-color"><i class="fas fa-cart-arrow-down"></i>
+                            <div style="font-size: 22px;">Train Details</div>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                </div>
+
                 
-            </div>
+                
+        </div>
 
     </div>
 
