--- a/Style/style-custom.css
+++ b/Style/style-custom.css
@@ -1,7 +1,18 @@
 
-.div-parent{
+.div-parent-lg{
     height: 250px;
     background-color: #3F51D4;
 }
 
+.div-parent-md{
+    height: 200px;
+    background-color: #3F51D4;
+}
 
+.pull-right{
+    float: right !important;
+  }
+
+  .pull-left{
+    float: left !important;
+  }
