--- a/Layout/Header-Footer/Header.html
+++ b/Layout/Header-Footer/Header.html
@@ -1,4 +1,19 @@
- 
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/x-icon" href="../../resources/favicon-train.ico" />
+        <title>BOOkit-Home</title>
+    
+        <link rel="stylesheet" type="text/css" href="../../fontawesome/css/all.css">
+        <link rel="stylesheet" href="../../fontawesome/css/fontawesome.min.css">
+    
+        <link rel="stylesheet" type="text/css" href="../../Style/style-custom.css">
+        <link rel="stylesheet" type="text/css" href="../../Style/style-custom-nav.css">
+    
+    </head>
+    <body>
     <div class="div-parent-lg">
         <div class="navbar">
             <a href="#home" class="nav-logo-text"><i class="fas fa-subway"></i>&nbsp BOOKit</a>
@@ -101,3 +116,6 @@
         </div>
 
     </div>
+
+</body>
+</html>
