--- a/Layout/Header-Footer/Header.html
+++ b/Layout/Header-Footer/Header.html
@@ -14,7 +14,7 @@
     
     </head>
     <body>
-    <div class="div-parent-lg">
+    <div class="div-parent-md">
         <div class="navbar">
             <a href="#home" class="nav-logo-text"><i class="fas fa-subway"></i>&nbsp BOOKit</a>
 
