--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -20,7 +20,7 @@
 
         //Jquery function for load nevigation to page
         $(function () {
-            $('#Header').html(getHeader());
+            $('#Header').html(getHeaderLG());
         });
     </script>
 </head>
