--- a/Layout/Header-Footer/Header.html
+++ b/Layout/Header-Footer/Header.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/x-icon" href="../../resources/favicon-train.ico" />
-        <title>BOOkit-Home</title>
+        <title>BOOkit-Header(For only Testing perpose)</title>
     
         <link rel="stylesheet" type="text/css" href="../../fontawesome/css/all.css">
         <link rel="stylesheet" href="../../fontawesome/css/fontawesome.min.css">
@@ -117,5 +117,24 @@
 
     </div>
 
+    <footer>
+        <div class="container" id="footer">
+                <div class="row">
+                        <div class="column" >
+                          <h2>Column 1</h2>
+                          <p>Some text..</p>
+                        </div>
+                        <div class="column" >
+                          <h2>Column 2</h2>
+                          <p>Some text..</p>
+                        </div>
+                        <div class="column" >
+                          <h2>Column 3</h2>
+                          <p>Some text..</p>
+                        </div>
+                      </div>
+        </div>
+    </footer>
+    
 </body>
 </html>
