--- a/Style/style-custom.css
+++ b/Style/style-custom.css
@@ -1,26 +1,57 @@
-
 .div-parent-lg{
     height: 250px;
     background-color: #3F51D4;
 }
-
 .div-parent-md{
     height: 200px;
     background-color: #3F51D4;
 }
-
 .pull-right{
     float: right !important;
-  }
-
-  .pull-left{
+}
+.pull-left{
     float: left !important;
-  }
+}
+.container {
+    width: 960px;
+    position: relative;
+    margin:0 auto;
+    line-height: 1.4em;
+    background-color: #3F51D4;
+}
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 150px;
+   /* Footer height */
+   background-color: #3F51D4;
+}
 
-  @media only screen and (max-width: 1440px) {
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+    height: 150px;
+   /* Should be removed. Only for demonstration */
+}
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+
+@media only screen and (max-width: 479px){
+    .container {
+        width: 90%;
+   }
+}
+@media only screen and (max-width: 1440px) {
     .div-parent-lg{
         height: 190px;
         background-color: #3F51D4;
-    }
-  }
-
+   }
+}
