--- a/Layout/Header-Footer/Header.html
+++ b/Layout/Header-Footer/Header.html
@@ -119,18 +119,30 @@
 
     <footer>
         <div class="container" id="footer">
-                <div class="row">
+                <div class="row font-Sego">
                         <div class="column" >
-                          <h2>Column 1</h2>
-                          <p>Some text..</p>
+                          <div class="footer-item">
+                            <h3>FOLLOW US ON:</h2>
+                            <a href="#" class="remove-underline footer-icon-size"><i class="fab fa-facebook"></i></a>
+                            <a href="#" class="remove-underline footer-icon-size"><i class="fab fa-google"></i></a>
+                            <a href="#" class="remove-underline footer-icon-size"><i class="fab fa-twitter-square"></i></a>
+                            <a href="#" class="remove-underline footer-icon-size"><i class="fab fa-linkedin"></i></a>
+                          </div>
                         </div>
                         <div class="column" >
-                          <h2>Column 2</h2>
-                          <p>Some text..</p>
+                          <div class="footer-item">
+                            <h3>How To</h2>
+                            <a href="#" class="remove-underline">Refund Rules</a> <br/>
+                            <a href="#" class="remove-underline">Advertise with us</a> <br/>
+                          </div>
                         </div>
                         <div class="column" >
-                          <h2>Column 3</h2>
-                          <p>Some text..</p>
+                          <div class="footer-item">
+                            <h3>Information</h2>
+                            <a href="#" class="remove-underline">For Newly Migrated Agents</a> <br/>
+                            <a href="#" class="remove-underline">About us</a> <br/>
+                            <div class="copyright-align"> &copy; 2019 BOOKit </div>
+                          </div>
                         </div>
                       </div>
         </div>
