--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -21,6 +21,7 @@
         //Jquery function for load nevigation to page
         $(function () {
             $('#Header').html(getHeaderLG());
+            $('#footerID').html(getFooter());
         });
     </script>
 </head>
@@ -30,6 +31,9 @@
     <div id='Header'>
     </div>
 
+    <footer id="footerID">
+
+    </footer>
 </body>
 
 </html>
