--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" type="text/css" href="../Style/style-custom.css">
     <link rel="stylesheet" type="text/css" href="../Style/style-custom-nav.css">
+    
+    <link rel="stylesheet" type="text/css" href="../Style/style-home.css">
 
     <script src="../Script/jquery-3.3.1.min.js"></script>
     <script src="../Script/Header.js"></script>
@@ -31,8 +33,15 @@
     <div id='Header'>
     </div>
 
-    <footer id="footerID">
+    <!--Page Content -->
+    <div >
+        <div class="search-block">
+                sd
+        </div>
+    </div>
 
+    <!--Footer -->
+    <footer id="footerID">
     </footer>
 </body>
 
