--- a/Style/style-custom.css
+++ b/Style/style-custom.css
@@ -1,3 +1,6 @@
+@charset "utf-8";
+/* CSS Document */
+
 .div-parent-lg{
     height: 250px;
     background-color: #3F51D4;
@@ -28,7 +31,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 150px;
+    height: 120px;
    /* Footer height */
    background-color: #3F51D4;
 }
@@ -50,7 +53,6 @@
 
 .footer-item{
     color: white;
-    padding: 10px;
     padding-left: 33%;
     
 }
