fixed footer possition error

--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -1,48 +1,69 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="../resources/favicon-train.ico" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../resources/favicon-train.ico"
+    />
     <title>BOOkit-Home</title>
 
-    <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.css">
-    <link rel="stylesheet" href="../fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.css" />
+    <link rel="stylesheet" href="../fontawesome/css/fontawesome.min.css" />
 
-    <link rel="stylesheet" type="text/css" href="../Style/style-custom.css">
-    <link rel="stylesheet" type="text/css" href="../Style/style-custom-nav.css">
-    
-    <link rel="stylesheet" type="text/css" href="../Style/style-home.css">
+    <link rel="stylesheet" type="text/css" href="../Style/style-custom.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../Style/style-custom-nav.css"
+    />
+
+    <link rel="stylesheet" type="text/css" href="../Style/style-home.css" />
 
     <script src="../Script/jquery-3.3.1.min.js"></script>
     <script src="../Script/Header.js"></script>
 
     <script>
-
-        //Jquery function for load nevigation to page
-        $(function () {
-            $('#Header').html(getHeaderLG());
-            $('#footerID').html(getFooter());
-        });
+      //Jquery function for load nevigation to page
+      $(function() {
+        $("#Header").html(getHeaderLG());
+        $("#footerID").html(getFooter());
+      });
     </script>
-</head>
+  </head>
 
-<body>
+  <body>
     <!--Navigation Bar -->
-    <div id='Header'>
-    </div>
+    <div id="Header"></div>
 
     <!--Page Content -->
-    <div >
-        <div class="search-block">
-                sd
+    <div>
+      <div class="search-block">
+        <div class="row font-Sego">
+          <div class="column center-block-column">
+            <p>
+              BOOKit Trains 24x7 Helpline <br />
+              011-1234567
+            </p>
+          </div>
+          <div class="column center-blick-column-second">
+            <p>
+                    Hassle Free Train Tickets Booking <br>
+                    - Zero service charge <br/>
+                    - Easy cancellation and refund <br/>
+                    - No hidden charges 
+            </p>
+          </div>
+          <div class="column">
+              
+          </div>
         </div>
+      </div>
     </div>
 
     <!--Footer -->
-    <footer id="footerID">
-    </footer>
-</body>
-
+    <footer id="footerID"></footer>
+  </body>
 </html>
