--- a/Style/style-custom.css
+++ b/Style/style-custom.css
@@ -28,7 +28,7 @@
     background-color: #3F51D4;
 }
 #footer {
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
     width: 100%;
     height: 120px;
