modify home page

--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -39,7 +39,7 @@
     <div id="Header"></div>
 
     <!--Page Content -->
-    <div>
+    <div style="height:100vh">
       <div class="search-block">
         <div class="row font-Sego">
           <div class="column center-block-column">
@@ -57,7 +57,7 @@
             </p>
           </div>
           <div class="column">
-              
+
           </div>
         </div>
       </div>
