modify home page andstyles

--- a/Layout/Header-Footer/Header.html
+++ b/Layout/Header-Footer/Header.html
@@ -118,7 +118,7 @@
     </div>
 
     <footer>
-        <div class="container" id="footer">
+        <div class="container-custom" id="footer">
                 <div class="row font-Sego">
                         <div class="column" >
                           <div class="footer-item">
