--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -41,24 +41,52 @@
     <!--Page Content -->
     <div style="height:100vh">
       <div class="search-block">
-        <div class="row font-Sego">
-          <div class="column center-block-column">
-            <p>
-              BOOKit Trains 24x7 Helpline <br />
-              011-1234567
-            </p>
+        <div>
+          <div class="row font-Sego">
+            <div class="column center-block-column">
+              <p>
+                BOOKit Trains 24x7 Helpline <br />
+                011-1234567
+              </p>
+              <div style="background-color:white">
+                <h3 class="master-blue-color">Your Ticket Search Ends Here</h3>
+              </div>
+            </div>
+            <div class="column center-blick-column-second">
+              <p style="padding-left: 22%;">
+                Hassle Free Train Tickets Booking <br />
+                - Zero service charge <br />
+                - Easy cancellation and refund <br />
+                - No hidden charges
+              </p>
+            </div>
+            <div class="column">
+              <img
+                id="imgTrain"
+                src="../resources/Train.png"
+                style="padding-left: 22%;"
+              />
+            </div>
           </div>
-          <div class="column center-blick-column-second">
-            <p>
-                    Hassle Free Train Tickets Booking <br>
-                    - Zero service charge <br/>
-                    - Easy cancellation and refund <br/>
-                    - No hidden charges 
-            </p>
-          </div>
-          <div class="column">
+        </div>
+        <div>
+          <div class="column white-space">
+            <div class="form-inline radio-pad">
+              <label class="container"
+                >One
+                <input type="radio" checked="checked" name="radio" />
+                <span class="checkmark"></span>
+              </label>
 
+              <label class="container"
+                >One
+                <input type="radio" checked="checked" name="radio" />
+                <span class="checkmark"></span>
+              </label>
+            </div>
           </div>
+          <div class="column white-space"></div>
+          <div class="column white-space"></div>
         </div>
       </div>
     </div>
