--- a/Style/style-custom.css
+++ b/Style/style-custom.css
@@ -20,7 +20,7 @@
 .pull-left{
     float: left !important;
 }
-.container {
+.container-custom {
     width: 960px;
     position: relative;
     margin:0 auto;
@@ -40,7 +40,7 @@
 /* Create three equal columns that floats next to each other */
 .column {
     float: left;
-    width: 33.33%;
+    width: 32%;
     height: 150px;
    /* Should be removed. Only for demonstration */
 }
@@ -69,10 +69,92 @@
     right: 20px;
 }
 
+.master-blue-color{
+    color: #3F51D4
+}
+
+/* The container */
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default radio button */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  /* Create a custom radio button */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the radio button is checked, add a blue background */
+  .container input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .container .checkmark:after {
+       top: 9px;
+      left: 9px;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: white;
+  }
+
+  .form-inline {  
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+  }
+
 @media only screen and (max-width: 479px){
-    .container {
+    .container-custom {
         width: 90%;
    }
+
+   .column {
+    float: left;
+    width: 32%;
+    height: 150px;
+    font-size: 9px;
+}
+
 }
 @media only screen and (max-width: 1440px) {
     .div-parent-lg{
@@ -80,3 +162,11 @@
         background-color: #3F51D4;
    }
 }
+
+@media (max-width: 800px) {
+    
+    .form-inline {
+      flex-direction: column;
+      align-items: stretch;
+    }
+  }
