home page responsive

--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -43,7 +43,7 @@
 
             });
 
-            
+
         });
 
         
@@ -66,7 +66,7 @@
                             011-1234567
                         </p>
                         <div style="background-color:white">
-                            <h3 class="master-blue-color">Your Ticket Search Ends Here</h3>
+                            <label class="master-blue-color txt1">Your Ticket Search Ends Here</label>
                         </div>
                     </div>
                     <div class="column center-blick-column-second">
@@ -118,6 +118,12 @@
                     </div>
                 </form>
             </div>
+
+            <div>
+                <img src="../resources/2019-03-10 13_56_41-Book Train, Bus & Flights_ Confirmtkt.com.png">
+            </div>
+
+
         </div>
     </div>
 
