Added new image

--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -110,7 +110,7 @@
                                 <input type="text" id="txtTrainTo" name="txtbTo">
                             </div>
                             <div class="search-bar-item calender" style="margin-left: 2%;">
-                                    <label for="dPicker">Date Of Birth</label>
+                                    <label for="dPicker">Date</label>
                                     <input type="date" name="dateofbirth" id="dPicker">
                             </div>
                             <button class="button" style="margin-left: 2%;">Search</button>
@@ -120,7 +120,7 @@
             </div>
 
             <div>
-                <img src="../resources/2019-03-10 13_56_41-Book Train, Bus & Flights_ Confirmtkt.com.png">
+                <img src="../resources/2019-03-10 13_56_41-Book Train, Bus & Flights_ Confirmtkt.com.png" class="responsive-custom image-suport">
             </div>
 
 
